@@ -1,3 +1,7 @@
+2006-12-19  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.texi (External transfer methods): Describe new method `scpc'.
+
 2006-11-07  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.texi (Configuration): scp is the default method.
